--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                                     <a href="./graphics.html">Graphics</a><i></i>
                                 </div>
                                 <div>
-                                    <a href="./UI.html">UI</a><i></i>
+                                    <a href="##">UI</a><i></i>
                                 </div>
                                 <div>
-                                    <a href="./3D.html">3D</a><i></i>
+                                    <a href="##">3D</a><i></i>
                                 </div>
                             </div>
                     </div>
