--- a/privacy.html
+++ b/privacy.html
@@ -32,7 +32,7 @@
                                     <a href="##">UI</a><i></i>
                                 </div>
                                 <div>
-                                    <a href="##"">3D</a><i></i>
+                                    <a href="##">3D</a><i></i>
                                 </div>
                             </div>
                     </div>
