--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="##" class="gray"></a>
             </div>
             <ul class="menu-list-content">
-                <li class="current"><a class="menu-list-box" href="./home.html" z-st="nav_tab_home">Home</a></li>
+                <li class="current"><a class="menu-list-box" href="./index.html" z-st="nav_tab_home">Home</a></li>
                 <li class="discover header-menu-withmore ">
                     <a class="menu-list-box" href="./discover.html">Discover</a>
                     <div class="menu-list discover-box hide">
