--- a/discover.html
+++ b/discover.html
@@ -28,12 +28,6 @@
                                 <div>
                                     <a href="./graphics.html">Graphics</a><i></i>
                                 </div>
-                                <div>
-                                    <a href="##">UI</a><i></i>
-                                </div>
-                                <div>
-                                    <a href="##">3D</a><i></i>
-                                </div>
                             </div>
                     </div>
                 </li>
@@ -464,5 +458,6 @@
         <div>Copyright © 1999-2018 DeCign</div>
            
     </footer>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
